--- a/content/positions/01-ai-sig.mdx
+++ b/content/positions/01-ai-sig.mdx
@@ -1,11 +1,11 @@
 ---
 role: "AI SIG Coordinator"
 org: "IEEE SCT SB"
-period: "2025 – Present"
+period: "2025–26"
 impact:
-  - "Community Growth"
+  - "AI/ML Community"
   - "Technical Workshops"
   - "Student Mentorship"
 ---
 
-Coordinating technical events and study groups focused on Artificial Intelligence and Machine Learning.
+Coordinating AI/ML study groups, technical sessions, and mentoring students on applied machine learning at IEEE SCT SB.
