--- a/content/positions/02-cybots.mdx
+++ b/content/positions/02-cybots.mdx
@@ -1,11 +1,11 @@
 ---
-role: "Execom Member"
-org: "CYBOTS SCTCE"
-period: "2025 – Present"
+role: "Campus Ambassador — Xtreme 19.0"
+org: "IEEE SCT SB"
+period: "2025"
 impact:
-  - "Robotics Workshops"
-  - "System Design"
-  - "Peer Learning"
+  - "IEEE Volunteer"
+  - "Global Programming Contest"
+  - "Campus Coordination"
 ---
 
-Exploring robotics systems and organizing hardware-focused sessions.
+Official IEEE Xtreme 19.0 campus ambassador — coordinating campus team participation for the global 24-hour programming competition as an IEEE volunteer.
